# wedding-bot-api

./: .dockerignore  .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  deploy.yml
app/: auth.py  config.py  main.py  models.py
app/rag/: chain.py  vectorstore.py
app/routes/: chat.py
